test/classes/errors/nilability-return-yield/return-unmanaged.chpl
class C { }
var global = new unmanaged C() : unmanaged C?;
proc P(): unmanaged C  return global;
var dum = P();
